bug 228949 - marking as junk with "delete mail marked as junk" set will undelete deleted mail, r=bienvenu